--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fullcalendar/react": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.17",
     "@supabase/supabase-js": "2.39.6",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.12.1",
     "next": "^14.2.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
